fix: make focus visible more vibrant with outline

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -488,8 +488,9 @@ select {
     --input-border-color: var(--color-primary-500);
     --shadow: oklch(from var(--color-primary-500) l c h / 0.4);
     box-shadow: 0 0 0 3px var(--shadow);
-    outline: 1px solid var(--shadow);
-    outline-offset: 0px;
+    outline: 1px solid var(--color-primary-600);
+    outline-offset: -1px;
+
     transition: var(--transition-fast) box-shadow, var(--transition-fast) outline;
 }   
 
@@ -639,3 +640,7 @@ label {
   }
 }
 /* card */
+
+/* site */
+
+/* site */
